# blog-agent-ai

./: .env.example  README.md  llm_model.py  llm_type.py  pyproject.toml
blogs/: create_blog_writer.py  main.py
interpretador/: cli_tool.py  command.py  main.py
query/: main.py  sql_query_ai.py
query/schemas/: schema_ecommerce.yaml
query/scripts/: clinica.sql  ecommerce.sql
